SARS-CoV2 simulation done

--- a/static/slides/10-hpc/slides.html
+++ b/static/slides/10-hpc/slides.html
@@ -1,21 +1,21 @@
+<!DOCTYPE html>
+<html lang="" xml:lang="">
+  <head>
+    <title>High performance computing, cloud computing</title>
+    <meta charset="utf-8" />
+    <meta name="author" content="George G. Vega Yon" />
+    <link rel="stylesheet" href="theme.css" type="text/css" />
+  </head>
+  <body>
+    <textarea id="source">
+class: center, middle, title-slide
+
+# High performance computing, cloud computing
+## PM 566: Introduction to Health Data Science
+### George G. Vega Yon
+
 ---
-title: "High performance computing, cloud computing"
-subtitle: "PM 566: Introduction to Health Data Science"
-author: "George G. Vega Yon"
-output:
-  # slidy_presentation
-  xaringan::moon_reader:
-    css: ["theme.css"]
-    lib_dir: libs
-    nature:
-      beforeInit: "macros.js"
-      ratio: "16:9"
-      highlightStyle: github
-      highlightLines: false
-      countIncrementalSlides: false
-      titleSlideClass: [center, middle]
-  #   code_download: true
----
+
 
 # Part I: intro
 
@@ -35,23 +35,23 @@ We will mostly focus on parallel computing.
 
 ## Serial computation
 
-<div align="center">
-<figure>
-<img src="fig/pll-computing-explained-serial.png" style="width:40%">
-<figcaption>Here we are using a single core. The function is applied one element at a time, leaving the other 3 cores without usage.</figcaption>
-</figure>
-</div>
+&lt;div align="center"&gt;
+&lt;figure&gt;
+&lt;img src="fig/pll-computing-explained-serial.png" style="width:40%"&gt;
+&lt;figcaption&gt;Here we are using a single core. The function is applied one element at a time, leaving the other 3 cores without usage.&lt;/figcaption&gt;
+&lt;/figure&gt;
+&lt;/div&gt;
 
 ---
 
 ## Parallel computation
 
-<div align="center">
-<figure>
-<img src="fig/pll-computing-explained-parallel.png" style="width:40%">
-<figcaption>In this more intelligent way of computation, we are taking full advantage of our computer by using all 4 cores at the same time. This will translate in a reduced computation time which, in the case of complicated/long calculations, can be an important speed gain.</figcaption>
-</figure>
-</div>
+&lt;div align="center"&gt;
+&lt;figure&gt;
+&lt;img src="fig/pll-computing-explained-parallel.png" style="width:40%"&gt;
+&lt;figcaption&gt;In this more intelligent way of computation, we are taking full advantage of our computer by using all 4 cores at the same time. This will translate in a reduced computation time which, in the case of complicated/long calculations, can be an important speed gain.&lt;/figcaption&gt;
+&lt;/figure&gt;
+&lt;/div&gt;
 
 ---
 
@@ -63,13 +63,13 @@ a. Type of instruction: Single vs Multiple
 
 b. Data stream: Single vs Multiple
 
-<figure>
-<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ae/SISD.svg/480px-SISD.svg.png" style="width:23%;">
-<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/97/MISD.svg/480px-MISD.svg.png" style="width:23%;">
-<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/21/SIMD.svg/480px-SIMD.svg.png" style="width:23%;">
-<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c6/MIMD.svg/480px-MIMD.svg.png" style="width:23%;">
-<figcaption><a href="https://en.wikipedia.org/wiki/Michael_J._Flynn" target="_blank">Michael Flynn</a>'s Taxonomy (<a href="https://en.wikipedia.org/wiki/Flynn%27s_taxonomy" target="_blank">wiki</a>)</figcaption>
-</figure>
+&lt;figure&gt;
+&lt;img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ae/SISD.svg/480px-SISD.svg.png" style="width:23%;"&gt;
+&lt;img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/97/MISD.svg/480px-MISD.svg.png" style="width:23%;"&gt;
+&lt;img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/21/SIMD.svg/480px-SIMD.svg.png" style="width:23%;"&gt;
+&lt;img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c6/MIMD.svg/480px-MIMD.svg.png" style="width:23%;"&gt;
+&lt;figcaption&gt;&lt;a href="https://en.wikipedia.org/wiki/Michael_J._Flynn" target="_blank"&gt;Michael Flynn&lt;/a&gt;'s Taxonomy (&lt;a href="https://en.wikipedia.org/wiki/Flynn%27s_taxonomy" target="_blank"&gt;wiki&lt;/a&gt;)&lt;/figcaption&gt;
+&lt;/figure&gt;
 
 ---
 
@@ -93,12 +93,12 @@ When it comes to parallel computing, there are several ways (levels) in which we
 
 ## Parallel computing: CPU components
 
-<div align="center">
-<figure>
-<img src="fig/cpu-slurm.png" style="width:40%">
-<figcaption>Taxonomy of CPUs (Downloaded from <a href="https://slurm.schedmd.com/mc_support.html">https://slurm.schedmd.com/mc_support.html</a>)</figcaption>
-</figure>
-</div>
+&lt;div align="center"&gt;
+&lt;figure&gt;
+&lt;img src="fig/cpu-slurm.png" style="width:40%"&gt;
+&lt;figcaption&gt;Taxonomy of CPUs (Downloaded from &lt;a href="https://slurm.schedmd.com/mc_support.html"&gt;https://slurm.schedmd.com/mc_support.html&lt;/a&gt;)&lt;/figcaption&gt;
+&lt;/figure&gt;
+&lt;/div&gt;
 
 ---
 
@@ -142,12 +142,12 @@ These services provide more than just computing (storage, data analysis, etc.). 
 
 ---
 
-<div align="center">
-<figure>
-<img src="fig/when_to_parallel.png" style="width:80%;">
-<figcaption>Ask yourself these questions before jumping into HPC!</figcaption>
-</figure>
-</div>
+&lt;div align="center"&gt;
+&lt;figure&gt;
+&lt;img src="fig/when_to_parallel.png" style="width:80%;"&gt;
+&lt;figcaption&gt;Ask yourself these questions before jumping into HPC!&lt;/figcaption&gt;
+&lt;/figure&gt;
+&lt;/div&gt;
 
 ---
 
@@ -181,15 +181,17 @@ We want to illustrate the importance of wearing face masks. We need to simulate 
 
 Download the program [here](sars-cov2.R).
 
-```{r covid-program, echo = TRUE, eval=TRUE}
+
+```r
 source("sars-cov2.R", echo=FALSE)
 ```
 
 ---
 
-```{r sim-nobody-wears-mask, cache=TRUE, eval=TRUE}
+
+```r
 set.seed(123355)
-stats_nobody_wears_masks <- replicate(50, {
+stats_nobody_wears_masks &lt;- replicate(50, {
   simulate_covid(
     pop_size    = 900,
     nsick       = 10,
@@ -202,9 +204,10 @@ stats_nobody_wears_masks <- replicate(50, {
 
 ---
 
-```{r half-wears-mask, cache=TRUE, eval=TRUE}
+
+```r
 set.seed(123355)
-stats_half_wears_masks <- replicate(50, {
+stats_half_wears_masks &lt;- replicate(50, {
   simulate_covid(
     pop_size    = 900,
     nsick       = 10,
@@ -217,9 +220,10 @@ stats_half_wears_masks <- replicate(50, {
 
 ---
 
-```{r all-wears-mask, cache=TRUE, eval=TRUE}
+
+```r
 set.seed(123355)
-stats_all_wears_masks <- replicate(50, {
+stats_all_wears_masks &lt;- replicate(50, {
   simulate_covid(
     pop_size    = 900,
     nsick       = 10,
@@ -232,15 +236,10 @@ stats_all_wears_masks <- replicate(50, {
 
 ---
 
-```{r boxplot, fig.width=6, fig.height=6, echo=FALSE, fig.align='center', fig.cap="Cumulative number of deseased as a function of whether none, half, or all individuals wear a face mask.", dev='svg'}
-stats_nobody_wears_masks <- do.call(rbind, stats_nobody_wears_masks)
-stats_half_wears_masks <- do.call(rbind, stats_half_wears_masks)
-stats_all_wears_masks <- do.call(rbind, stats_all_wears_masks)
-
-boxplot(stats_nobody_wears_masks, col = "tomato")
-boxplot(stats_half_wears_masks, add = TRUE, col = "gray")
-boxplot(stats_all_wears_masks, add = TRUE, col = "steelblue")
-```
+&lt;div class="figure" style="text-align: center"&gt;
+&lt;img src="slides_files/figure-html/boxplot-1.svg" alt="Cumulative number of deseased as a function of whether none, half, or all individuals wear a face mask."  /&gt;
+&lt;p class="caption"&gt;Cumulative number of deseased as a function of whether none, half, or all individuals wear a face mask.&lt;/p&gt;
+&lt;/div&gt;
 
 ---
 
@@ -248,9 +247,10 @@ boxplot(stats_all_wears_masks, add = TRUE, col = "steelblue")
 
 We will use the function `system.time` to measure how much time it takes to complete 20 simulations in serial versus paralle fashion using 4 cores
 
-```{r timing1, cache=TRUE}
-time_serial <- system.time({
-  ans_serial <- replicate(50, {
+
+```r
+time_serial &lt;- system.time({
+  ans_serial &lt;- replicate(50, {
     simulate_covid(
       pop_size    = 900,
       nsick       = 10,
@@ -261,8 +261,8 @@ time_serial <- system.time({
     )
 })
 
-time_parallel <- system.time({
-  ans_parallel <- parallel::mclapply(1:50, function(i) {
+time_parallel &lt;- system.time({
+  ans_parallel &lt;- parallel::mclapply(1:50, function(i) {
     simulate_covid(
       pop_size    = 900,
       nsick       = 10,
@@ -275,8 +275,19 @@ time_parallel <- system.time({
 
 ---
 
-```{r}
+
+```r
 time_serial;time_parallel
+```
+
+```
+##    user  system elapsed 
+##  19.524   0.010  19.565
+```
+
+```
+##    user  system elapsed 
+##   9.788   0.048  12.167
 ```
 
 Using 2 cores is about twice as fast.
@@ -308,3 +319,111 @@ https://cloud.google.com/solutions/running-r-at-scale
 - Git exercises by Wojciech Frącz and Jacek Dajda [(link)](https://gitexercises.fracz.com/)
 
 - Checkout GitHub's Training YouTube Channel [(link)](https://www.youtube.com/user/GitHubGuides)
+    </textarea>
+<style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
+<script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
+<script src="macros.js"></script>
+<script>var slideshow = remark.create({
+"ratio": "16:9",
+"highlightStyle": "github",
+"highlightLines": false,
+"countIncrementalSlides": false
+});
+if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
+  window.dispatchEvent(new Event('resize'));
+});
+(function(d) {
+  var s = d.createElement("style"), r = d.querySelector(".remark-slide-scaler");
+  if (!r) return;
+  s.type = "text/css"; s.innerHTML = "@page {size: " + r.style.width + " " + r.style.height +"; }";
+  d.head.appendChild(s);
+})(document);
+
+(function(d) {
+  var el = d.getElementsByClassName("remark-slides-area");
+  if (!el) return;
+  var slide, slides = slideshow.getSlides(), els = el[0].children;
+  for (var i = 1; i < slides.length; i++) {
+    slide = slides[i];
+    if (slide.properties.continued === "true" || slide.properties.count === "false") {
+      els[i - 1].className += ' has-continuation';
+    }
+  }
+  var s = d.createElement("style");
+  s.type = "text/css"; s.innerHTML = "@media print { .has-continuation { display: none; } }";
+  d.head.appendChild(s);
+})(document);
+// delete the temporary CSS (for displaying all slides initially) when the user
+// starts to view slides
+(function() {
+  var deleted = false;
+  slideshow.on('beforeShowSlide', function(slide) {
+    if (deleted) return;
+    var sheets = document.styleSheets, node;
+    for (var i = 0; i < sheets.length; i++) {
+      node = sheets[i].ownerNode;
+      if (node.dataset["target"] !== "print-only") continue;
+      node.parentNode.removeChild(node);
+    }
+    deleted = true;
+  });
+})();
+(function() {
+  "use strict"
+  // Replace <script> tags in slides area to make them executable
+  var scripts = document.querySelectorAll(
+    '.remark-slides-area .remark-slide-container script'
+  );
+  if (!scripts.length) return;
+  for (var i = 0; i < scripts.length; i++) {
+    var s = document.createElement('script');
+    var code = document.createTextNode(scripts[i].textContent);
+    s.appendChild(code);
+    var scriptAttrs = scripts[i].attributes;
+    for (var j = 0; j < scriptAttrs.length; j++) {
+      s.setAttribute(scriptAttrs[j].name, scriptAttrs[j].value);
+    }
+    scripts[i].parentElement.replaceChild(s, scripts[i]);
+  }
+})();
+(function() {
+  var links = document.getElementsByTagName('a');
+  for (var i = 0; i < links.length; i++) {
+    if (/^(https?:)?\/\//.test(links[i].getAttribute('href'))) {
+      links[i].target = '_blank';
+    }
+  }
+})();</script>
+
+<script>
+slideshow._releaseMath = function(el) {
+  var i, text, code, codes = el.getElementsByTagName('code');
+  for (i = 0; i < codes.length;) {
+    code = codes[i];
+    if (code.parentNode.tagName !== 'PRE' && code.childElementCount === 0) {
+      text = code.textContent;
+      if (/^\\\((.|\s)+\\\)$/.test(text) || /^\\\[(.|\s)+\\\]$/.test(text) ||
+          /^\$\$(.|\s)+\$\$$/.test(text) ||
+          /^\\begin\{([^}]+)\}(.|\s)+\\end\{[^}]+\}$/.test(text)) {
+        code.outerHTML = code.innerHTML;  // remove <code></code>
+        continue;
+      }
+    }
+    i++;
+  }
+};
+slideshow._releaseMath(document);
+</script>
+<!-- dynamically load mathjax for compatibility with self-contained -->
+<script>
+(function () {
+  var script = document.createElement('script');
+  script.type = 'text/javascript';
+  script.src  = 'https://mathjax.rstudio.com/latest/MathJax.js?config=TeX-MML-AM_CHTML';
+  if (location.protocol !== 'file:' && /^https?:/.test(script.src))
+    script.src  = script.src.replace(/^https?:/, '');
+  document.getElementsByTagName('head')[0].appendChild(script);
+})();
+</script>
+  </body>
+</html>
