--- a/static/slides/10-hpc/slides.html
+++ b/static/slides/10-hpc/slides.html
@@ -165,15 +165,17 @@ An altered version of Conway's game of life
 
    a. 100% if neither wears a face-mask.
    
-   b. 50% if a healthy individual wears the face-mask but the sick individual does not.
+   b. 50% if a healthy individual wears the face-mask but the infected individual does not.
    
-   c. 20% if a sick individual wears the face-mask, but the health individual does not.
+   c. 20% if a infected individual wears the face-mask, but the health individual does not.
    
    d. 5% if both wear the face-mask.
     
-4. Sick individuals may die with probability 10%.
+4. Infected individuals may die with probability 10%.
   
 We want to illustrate the importance of wearing face masks. We need to simulate a system with 2,500 (50 x 50) individuals, 1,000 times so we can analyze: (a) contagion curve, (b) death curve.
+
+More models like this: The [SIRD model](https://en.wikipedia.org/wiki/Compartmental_models_in_epidemiology#The_SIRD_model) (Susceptible-Infected-Recovered-Deceased)
 
 ---
 
@@ -196,7 +198,7 @@ stats_nobody_wears_masks &lt;- replicate(50, {
     pop_size    = 900,
     nsick       = 10,
     nwears_mask = 0,
-    nsteps      = 20)$statistics[,"deseased"]
+    nsteps      = 20)$statistics[,"deceased"]
   },
   simplify = FALSE
   )
@@ -212,7 +214,7 @@ stats_half_wears_masks &lt;- replicate(50, {
     pop_size    = 900,
     nsick       = 10,
     nwears_mask = 450,
-    nsteps      = 20)$statistics[,"deseased"]
+    nsteps      = 20)$statistics[,"deceased"]
   },
   simplify = FALSE
   )
@@ -228,7 +230,7 @@ stats_all_wears_masks &lt;- replicate(50, {
     pop_size    = 900,
     nsick       = 10,
     nwears_mask = 900,
-    nsteps      = 20)$statistics[,"deseased"]
+    nsteps      = 20)$statistics[,"deceased"]
   },
   simplify = FALSE
   )
@@ -237,13 +239,13 @@ stats_all_wears_masks &lt;- replicate(50, {
 ---
 
 &lt;div class="figure" style="text-align: center"&gt;
-&lt;img src="slides_files/figure-html/boxplot-1.svg" alt="Cumulative number of deseased as a function of whether none, half, or all individuals wear a face mask."  /&gt;
-&lt;p class="caption"&gt;Cumulative number of deseased as a function of whether none, half, or all individuals wear a face mask.&lt;/p&gt;
+&lt;img src="slides_files/figure-html/boxplot-1.svg" alt="Cumulative number of deceased as a function of whether none, half, or all individuals wear a face mask."  /&gt;
+&lt;p class="caption"&gt;Cumulative number of deceased as a function of whether none, half, or all individuals wear a face mask.&lt;/p&gt;
 &lt;/div&gt;
 
 ---
 
-## Timing
+## Speed things up: Timing under the serial implementation
 
 We will use the function `system.time` to measure how much time it takes to complete 20 simulations in serial versus paralle fashion using 4 cores
 
@@ -255,19 +257,29 @@ time_serial &lt;- system.time({
       pop_size    = 900,
       nsick       = 10,
       nwears_mask = 900,
-      nsteps      = 20)$statistics[,"deseased"]
+      nsteps      = 20)$statistics[,"deceased"]
     },
     simplify = FALSE
     )
 })
+```
 
-time_parallel &lt;- system.time({
+---
+
+## Speed things up: Parallel a Forking Cluster
+
+Alternative 1: If you are using Unix-like system (ubuntu, mac, etc.), you can
+take advantage of process forking, and thus, parallel's `mclapply` function:
+
+
+```r
+time_parallel_fork &lt;- system.time({
   ans_parallel &lt;- parallel::mclapply(1:50, function(i) {
     simulate_covid(
       pop_size    = 900,
       nsick       = 10,
       nwears_mask = 900,
-      nsteps      = 20)$statistics[,"deseased"]
+      nsteps      = 20)$statistics[,"deceased"]
     }, mc.cores = 2L
   )
 })
@@ -275,22 +287,95 @@ time_parallel &lt;- system.time({
 
 ---
 
+## Speed things up: Parallel with a Socket Cluster
+
+
+Alternative 2: Regardless of the operating system, we can use a Socket cluster,
+which is simply a group of fresh R sessions that listen to the parent/main/mother 
+session.
+
 
 ```r
-time_serial;time_parallel
+cl &lt;- parallel::makePSOCKcluster(2L)
+```
+
+```r
+# We could either export all the needed variables
+parallel::clusterExport(
+  cl,
+  c("calc_stats", "codes", "dat", "get_neighbors", "init", "probs_sick",
+    "probs_susc", "simulate_covid", "update_status", "update_status_all"
+    )
+  )
+```
+
+Or simply running the simulation script in the other sessions
+
+
+```r
+parallel::clusterEvalQ(cl, source("sars-cov2.R"))
+```
+
+---
+
+Bonus: Checking what are the processes running on the system
+
+```r
+(pids &lt;- c(
+  master    = Sys.getpid(),
+  offspring = unlist(parallel::clusterEvalQ(cl, Sys.getpid()))
+  ))
+#      master offspring1 offspring2 
+#     14810      15998      16012 
+```
+
+If you are using unix, you can see more details:
+
+![](fig/ps-in-parallel.png)
+
+---
+
+## Speed things up: Parallel with a Socket Cluster (cont'd)
+
+
+```r
+time_parallel_sock &lt;- system.time({
+  ans_parallel &lt;- parallel::parLapply(cl, 1:50, function(i) {
+    simulate_covid(
+      pop_size    = 900,
+      nsick       = 10,
+      nwears_mask = 900,
+      nsteps      = 20)$statistics[,"deceased"]
+    }
+  )
+})
+parallel::stopCluster(cl)
+```
+
+---
+
+Using two threads/processes, you can obtain the following speedup
+
+
+```r
+time_serial;time_parallel_sock;time_parallel_fork
 ```
 
 ```
 ##    user  system elapsed 
-##  19.524   0.010  19.565
+##  23.344   0.172  23.818
 ```
 
 ```
 ##    user  system elapsed 
-##   9.788   0.048  12.167
+##   0.004   0.000  14.472
 ```
 
-Using 2 cores is about twice as fast.
+```
+##    user  system elapsed 
+##   9.380   0.044  11.560
+```
+
 
 ---
 
