--- a/content/class/10-class.html
+++ b/content/class/10-class.html
@@ -20,16 +20,22 @@ editor_options:
   chunk_output_type: console
 ---
 
-## Lab Exercise
+<!-- BLOGDOWN-HEAD -->
+<!-- /BLOGDOWN-HEAD -->
 
-[link](/assignment/10-lab/)
 
-## Slides
-
-[link](/slides/10-hpc/slides.html)
-
-## Links
-
-- [Git](https://git-scm.com)
-- [GitHub](https://github.com)
-
+<div id="lab-exercise" class="section level2">
+<h2>Lab Exercise</h2>
+<p><a href="/assignment/10-lab/">link</a></p>
+</div>
+<div id="slides" class="section level2">
+<h2>Slides</h2>
+<p><a href="/slides/10-hpc/slides.html">link</a></p>
+</div>
+<div id="links" class="section level2">
+<h2>Links</h2>
+<ul>
+<li><a href="https://git-scm.com">Git</a></li>
+<li><a href="https://github.com">GitHub</a></li>
+</ul>
+</div>
