--- a/content/assignment/02-lab.html
+++ b/content/assignment/02-lab.html
@@ -1,3 +1,9 @@
+---
+title: "Lab 02 - GitHub"
+output: tufte::tufte_html
+link-citations: yes
+---
+
 
 
 <div id="learning-goals" class="section level1">
