--- a/static/slides/03-exploratory/slides.html
+++ b/static/slides/03-exploratory/slides.html
@@ -23,17 +23,23 @@ class: center, middle, title-slide
 
 # Exploratory Data Analysis
 
-- Data science is an exciting discipline that allows you to turn raw data into understanding, insight, and knowledge.
+* Exploratory data analysis is the process of summarizing data
+* It should be the first step in your analysis pipeline
+* It involves:
+  + checking data (import issues, outliers, missing values, data errors)
+  + cleaning data
+  + summary statistics of key variables (univariate and bivariate)
+  + basic plots and graphs
 
---
-
+---
+# Pipeline
 .center[
 ![](img/data-science.png)
 ]
 
+EDA involves Import -&gt; Tidy -&gt; Transform -&gt; Visualize
 ---
 
-![](img/demand.png)
 
 ---
 
