--- a/content/reading/03-reading.html
+++ b/content/reading/03-reading.html
@@ -5,7 +5,7 @@
 <div id="exploratory-data-analysis" class="section level2">
 <h2>Exploratory Data Analysis</h2>
 <ul>
-<li>The main text we will use is <a href="https://bookdown.org/rdpeng/exdata/">Exploratory Data Analysis with R</a></li>
+<li>The main text we will use for EDA is another book by Roger Peng, <a href="https://bookdown.org/rdpeng/exdata/">Exploratory Data Analysis with R</a></li>
 <li>Please focus on <a href="https://bookdown.org/rdpeng/exdata/exploratory-data-analysis-checklist.html">Chapter 4</a>, <a href="https://bookdown.org/rdpeng/exdata/principles-of-analytic-graphics.html">Chapter 5</a> and <a href="https://bookdown.org/rdpeng/exdata/exploratory-graphs.html">Chapter 6</a></li>
 </ul>
 </div>
