remove reading and class from menu

--- a/content/reading/11-reading.html
+++ b/content/reading/11-reading.html
@@ -1,3 +1,12 @@
+---
+title: "Interactive visualization and effective data communication I"
+date: "2020-08-04"
+citeproc: false
+bibliography: ../../static/bib/references.bib
+csl: ../../static/bib/chicago-fullnote-bibliography-no-bib.csl
+---
+
+<script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
 <div id="required-reading" class="section level1">
