remove author name from pages

--- a/content/assignment/01-lab.html
+++ b/content/assignment/01-lab.html
@@ -4,6 +4,7 @@ output: tufte::tufte_html
 link-citations: yes
 ---
 
+<script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
 <div id="learning-goals" class="section level1">
@@ -250,6 +251,6 @@ library(usethis)</code></pre>
 <div class="footnotes">
 <hr />
 <ol>
-<li id="fn1"><p><a href="http://happygitwithr.com/github-acct.html#username-advice">Happy git with R</a> by Jenny Bryan<a href="#fnref1" class="footnote-back">↩</a></p></li>
+<li id="fn1"><p><a href="http://happygitwithr.com/github-acct.html#username-advice">Happy git with R</a> by Jenny Bryan<a href="#fnref1" class="footnote-back">↩︎</a></p></li>
 </ol>
 </div>
