--- a/content/assignment/_index.html
+++ b/content/assignment/_index.html
@@ -3,6 +3,7 @@ title: "Assignments"
 slug: assignments
 ---
 
+<script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
 <div id="weekly-memos" class="section level1">
