--- a/content/class/01-class.html
+++ b/content/class/01-class.html
@@ -21,6 +21,7 @@ editor_options:
 ---
 
 <!-- BLOGDOWN-HEAD -->
+<script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 <!-- /BLOGDOWN-HEAD -->
 
 
