--- a/content/reading/01-reading.html
+++ b/content/reading/01-reading.html
@@ -6,6 +6,7 @@ bibliography: ../../static/bib/references.bib
 csl: ../../static/bib/chicago-fullnote-bibliography-no-bib.csl
 ---
 
+<script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
 <div id="required-reading" class="section level1">
