--- a/content/assignment/10-lab.html
+++ b/content/assignment/10-lab.html
@@ -4,6 +4,7 @@ output: tufte::tufte_html
 link-citations: yes
 ---
 
+<script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
 <div id="learning-goals" class="section level1">
