--- a/content/syllabus/index.html
+++ b/content/syllabus/index.html
@@ -9,6 +9,7 @@ output:
       toc: TRUE
 ---
 
+<script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 <div id="TOC">
 <ul>
@@ -23,7 +24,8 @@ output:
 <li><a href="#assignment-submission-policy">Assignment Submission Policy</a></li>
 <li><a href="#schedule">Schedule</a></li>
 <li><a href="#statement-for-students-with-disabilities">Statement for students with disabilities</a></li>
-<li><a href="#statement-on-academic-conduct-and-support-systems">Statement on academic conduct and support systems</a><ul>
+<li><a href="#statement-on-academic-conduct-and-support-systems">Statement on academic conduct and support systems</a>
+<ul>
 <li><a href="#academic-conduct">Academic Conduct:</a></li>
 <li><a href="#support-systems">Support Systems:</a></li>
 </ul></li>
